# nexussh

./: .gitignore  DESIGN.md  LICENSE  README.md  README.ru.md  ROADMAP.md  install.sh
.github/workflows/: android.yml  build-backends.yml  build.yml
desktop/: .gitignore  index.html  package-lock.json  package.json
desktop/flatpak/: org.hipogas.nexussh.metainfo.xml  org.hipogas.nexussh.yml
desktop/patches/: @xterm+xterm+5.5.0.patch
desktop/scripts/: patch-android-manifest.sh  test-headless-strip.mjs
desktop/src/: AddTunnelDialog.tsx  AiIndicatorDot.tsx  AiPanel.tsx  App.css  App.tsx  BackendProgress.tsx  BulkImportDialog.tsx  BundleExportDialog.tsx  BundleImportDialog.tsx  ChoiceDialog.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ConnectError.tsx  ConnectForm.tsx  ContextMenu.tsx  CorpVpnStatus.tsx  DialogHost.tsx  FileViewer.tsx  FolderPicker.tsx  ForwardEditDialog.tsx  HistoryPanel.tsx  HostDialog.tsx  HostInfoCard.tsx  ImportHostsPanel.tsx  KbiPromptDialog.tsx  LanguageSwitcher.tsx  MobileFiles.tsx  MobileTabBar.tsx  MobileTopBar.tsx  PaneHeader.tsx  PasswordPrompt.tsx  Popover.tsx  PromptDialog.tsx  QuickConnectDialog.tsx  ResizeHandles.tsx  SFTPPanel.tsx  Select.tsx  SettingsScreen.tsx  ShortcutsOverlay.tsx  Sidebar.tsx  (+42 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
desktop/src-tauri/binaries/: .gitignore
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/scripts/: fetch-xray.sh
desktop/src-tauri/src/: account.rs  account_crypto.rs  android_keepalive.rs  android_updater.rs  backends.rs  biometric.rs  bundle.rs  cleanup.rs  history.rs  import_sources.rs  l2tp.rs  lib.rs  localfs.rs  sftp.rs  ssh.rs  ssh_config.rs  sshlog.rs  sync.rs  tunnel.rs  updater.rs  vault.rs  vpn.rs
desktop/src/components/: primitives.tsx
desktop/src/settings/: AboutSection.tsx  AccountSection.tsx  AppearanceSection.tsx  BehaviorSection.tsx  MatrixRain.tsx  SyncHostsDialog.tsx  UpdatesSection.tsx  VpnSection.tsx  fonts.ts  primitives.tsx  settings-store.ts  themes.ts
docs/: ANDROID_PROPOSAL.md
docs/screenshots/: README.md
scripts/: visual-test.sh
sync-server/: Cargo.toml  README.md
sync-server/src/: ai.rs  crypto.rs  db.rs  handlers.rs  items.rs  lib.rs  main.rs  ratelimit.rs
sync-server/tests/: api.rs
