[package]
name = "nexussh-sync-server"
version = "0.1.0"
edition = "2021"
description = "NexuSSH end-to-end-encrypted account sync backend (Phase 0)"
license = "MIT"

[[bin]]
name = "nexussh-sync-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
argon2 = { version = "0.5", features = ["std"] }
totp-rs = { version = "5", features = ["otpauth", "gen_secret"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
subtle = "2"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
base64 = "0.22"
