[package]
name = "nexussh"
version = "1.4.7"
description = "NexuSSH — cross-platform SSH client with custom Matrix UI"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "^0.1"
thiserror = "^1"
anyhow = "^1"
russh = { version = "0.61.1", features = ["des"] }
russh-keys = "0.49.2"
russh-sftp = "2.1.1"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
tauri-plugin-store = "2.4.3"
age = { version = "0.11.3", features = ["armor"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Clipboard read/write that actually works on Android — the WebView's
# navigator.clipboard is unreliable/blocked there (paste returned nothing).
tauri-plugin-clipboard-manager = "2"
# Capture russh's tracing output (KEX / host-key / auth / disconnect) into an
# in-memory ring buffer so a failed connect can show WHY it failed (ssh -vvv-ish).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Session-history recordings are gzip-compressed before age-encryption. flate2's
# default miniz_oxide backend is pure Rust (no C toolchain) so it cross-compiles
# cleanly to Android/Windows in CI.
flate2 = "1"
# (base64 — already a dependency below — encodes raw terminal bytes into the
#  NDJSON history events losslessly.)
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
tokio-socks = "0.5.2"
ureq = "2.12"
sha2 = "0.10"

# Android-only: JNI access to PackageInstaller for the in-app updater.
# Access to the JNIEnv/Activity comes from Tauri 2's
# `webview.jni_handle().exec(...)` (works on the WebView UI thread).
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

# Linux-only: libc for redirecting native stderr (WebKit/GL) to a log file.
# gtk (which re-exports gdk) is already in the tree via tao/webkit2gtk at 0.18;
# we depend on it directly to query `gdk::Screen::is_composited()` so window
# transparency (rounded corners) is only enabled when a compositor exists.
# Pinned to the version tao/webview already use so cargo unifies, not duplicates.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
gtk = "0.18"

# Windows-only: read PuTTY sessions from HKCU\Software\SimonTatham\PuTTY\Sessions
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
# Job Object APIs: attach xray children so they auto-die when NexuSSH dies
# (clean exit, crash, force-quit) — prevents zombie xray.exe blocking the next
# installer.
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }

# Desktop-only: collapse a second launch into a NEW WINDOW of the already-
# running instance, so every window shares one process (shared Rust state +
# working cross-window events). Without this, double-launching forks a second
# process that races the same hosts.json / vault.age files and can clobber edits.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

